# cursach

./: .gitignore  Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml  rust_less.yml
migrations/2020-02-06-110451_Whole_DB/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  schema.rs.bak
src/handlers/: bet.rs  horses.rs  mod.rs  owners.rs  paym.rs  run.rs  users.rs
src/tests/: logic_tests.rs  mod.rs
src/tests_framework/: mod.rs
src/tests_framework/tests/: mod.rs
