[package]
name = "runs_srv"
version = "0.1.0"
authors = ["tema3210"]
edition = "2018"

[dependencies]
actix-web = {version="2.0.0",features=["rustls"]}
actix-rt = {version="1"}
rustls = "0.16"
tokio = {version= "0.2.11", features=["fs"]}
diesel = { version = "1.4.3", features = ["sqlite","mysql","r2d2","chrono"] }
diesel_derives= "1.4.1"
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
chrono = { version = "0.4.10", features = ["serde"] }
tokio-diesel = "0.3.0"
r2d2 = "0.8.8"
once_cell = "1.3.1"
http = "0.2.0"
actix-web-codegen = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
diesel-derive-enum = { version = "1"}
